@startuml

title __YOURWORKHERE's Class Diagram__\n

  package yourworkhere {
    abstract class Account {
        # accountID : String
        # balance : double
        # accountType : String
        # firstName : String
        # lastName : String
        {abstract} + getAccountManager()
        + getAccountID()
        + setAccountID()
        + getBalance()
        + setBalance()
        + getAccountType()
        + setAccountType()
        + getFirstName()
        + setFirstName()
        + getLastName()
        + setLastName()
    }
  }
  

  package yourworkhere {
    class CheckingAccount {
        - overdraftFee : double
        ~ CheckingAccount()
        ~ CheckingAccount()
        + getAccountManager()
        + getOverdraftFee()
        + setOverDraftFee()
        + toString()
    }
  }
  

  package yourworkhere {
    class CheckingAccountManager {
        + CheckingAccountManager()
        + getAccountManager()
        + deposit()
        + withdraw()
    }
  }
  

  package yourworkhere {
    class CompoundCalculator {
        {static} + calculate()
    }
  }
  

  package yourworkhere {
    class ExampleAccount {
        {static} + main()
    }
  }
  

  package yourworkhere {
    class ExampleAccount2 {
        {static} + main()
    }
  }
  

  package yourworkhere {
    class Hello {
        {static} + main()
    }
  }
  

  package yourworkhere {
    interface IAccountManager {
        {abstract} + withdraw()
        {abstract} + deposit()
        {abstract} + getAccountManager()
    }
  }
  

  package yourworkhere {
    class ImbConversions {
        {static} + CurrencyConvert()
    }
  }
  

  package yourworkhere {
    class Ledger {
        {static} - instance : Ledger
        {static} + accountsMap : HashMap<String, Account>
        {static} + getInstance()
        + store()
        + retrieve()
        + createAccount()
        + getNextAccountID()
        + getAllAccounts()
    }
  }
  

  package yourworkhere {
    class OverdraftException {
        + OverdraftException()
    }
  }
  

  package yourworkhere {
    class PrintAccount {
        {static} + execute()
    }
  }
  

  package yourworkhere {
    class Reporter {
        + Reporter()
        + Reporter()
        + getNumAccounts()
        + getAccountsWithMinimum()
        + printAllAccounts()
        + getNumAccountsByType()
    }
  }
  

  package yourworkhere {
    class SavingsAccount {
        - minBalance : double
        - currentMonthlyWithdrawals : int
        - maxMonthlyWithdrawals : int
        ~ SavingsAccount()
        ~ SavingsAccount()
        + getAccountManager()
        + getMinBalance()
        + setMinBalance()
        + getCurrentMonthlyWithdrawals()
        + setCurrentMonthlyWithdrawals()
        + getMaxMonthlyWithdrawals()
        + setMaxMonthlyWithdrawals()
        + toString()
    }
  }
  

  package yourworkhere {
    class SavingsAccountManager {
        + SavingsAccountManager()
        + getAccountManager()
        + withdraw()
        + deposit()
    }
  }
  

  CheckingAccount -up-|> Account
  CheckingAccountManager -up-|> IAccountManager
  CheckingAccountManager o-- CheckingAccount : account
  Ledger o-- Account : acct
  Reporter o-- Ledger : ledger
  SavingsAccount -up-|> Account
  SavingsAccountManager -up-|> IAccountManager
  SavingsAccountManager o-- SavingsAccount : account


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
